--- a/app/globals.scss
+++ b/app/globals.scss
@@ -80,7 +80,7 @@
   position: relative;
 
   &::after {
-    @apply bg-green-500;
+    @apply bg-emerald-500;
     content: "";
     position: absolute;
     left: 0;
